...
                                    <outlet property="progressView" destination="NbT-HK-UxR" id="IoW-lf-Zg0"/>
                                    <segue destination="HH3-a6-WMB" kind="show" identifier="runDetails" id="bsH-SD-FIg"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="table--myruns"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="Ps4-eg-EVW" id="aj7-wp-ycI"/>
                            <outlet property="delegate" destination="Ps4-eg-EVW" id="EpM-KF-3NO"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Runs" id="3Xb-g1-MKS">
                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="5dy-bf-iiY">
                            <connections>
                                <segue destination="b5M-JG-DYN" kind="show" id="EgK-RB-gaV"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="-1524" y="400.5"/>
        </scene>
        <!--Runs-->
        <scene sceneID="3gg-4Q-3MZ">
            <objects>
                <navigationController id="tdZ-FN-RTE" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Runs" image="RunTab30" id="cbq-uA-HF1"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XGO-V9-ddc">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.40000000000000002" green="0.70196078429999997" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
...
                                                    <variation key="heightClass=regular-widthClass=compact">
                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    </variation>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="cell--addRun--dateTime"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="179" id="CEq-ej-pDf">
                                        <rect key="frame" x="0.0" y="79" width="375" height="179"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CEq-ej-pDf" id="2j8-GS-Ytb">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="178.5"/>
...
                                                    <variation key="heightClass=regular-widthClass=compact">
                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    </variation>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="cell--addRun--distance">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="179" id="Xae-rm-c1w">
                                        <rect key="frame" x="0.0" y="302" width="375" height="179"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <variation key="heightClass=regular-widthClass=compact">
                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    </variation>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="cell--addRun--duration"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="179" id="l0d-FS-9El">
                                        <rect key="frame" x="0.0" y="748" width="375" height="179"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l0d-FS-9El" id="PKd-H9-n2N">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="178.5"/>
...
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="table--addRun"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="b5M-JG-DYN" id="SBN-J1-3HC"/>
                            <outlet property="delegate" destination="b5M-JG-DYN" id="BfQ-Cd-mn9"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add Run" id="0wN-Lp-bjP">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="qgC-Wj-91j">
                            <connections>
                                <action selector="saveButtonPressedWithSender:" destination="b5M-JG-DYN" id="GfQ-bh-9XK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
