...
        cancelButton.setTitle("Cancel", forState: .Normal)
        cancelButton.sizeToFit()
        cancelButton.addTarget(self, action: "cancelPress:", forControlEvents: .TouchUpInside)
        pickerViewHolder.addSubview(cancelButton)
        
        let doneButton = UIButton(frame: CGRect(x: windowWidth - 96, y: 5, width: 0, height: 0))
        doneButton.setTitle("Done", forState: .Normal)
        doneButton.addTarget(self, action: "donePress:", forControlEvents: .TouchUpInside)
        doneButton.sizeToFit()
        pickerViewHolder.addSubview(doneButton)
    }

    func setupPickerView(pickerType: String) {
...
