...

    // MARK: - Interface Actions

    /**
    This method is called when the user presses the done button. It saves the current settings.
    1. IF changes have been made
        a. Create an alert with the title "Save Settings?" and the options 'Save' and 'Cancel'
        (Pressing save calls the function saveSettings and dismisses the view controller, pressing cancel just dismisses the view controller)
        b. Present the alert
    2. ELSE
        a. Dismiss the setupViewController
    
    Uses the following local variables:
...
